# just-clean-up

./: .env  .gitignore  Cargo.toml  README.md  pytest.ini
.github/workflows/: ci_pipe.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20230717_000001_create_user_table.rs
migrations/: 20230719190310_user.sql
res/: errors.toml
src/: auth_middleware.rs  config.rs  context.rs  database.rs  error.rs  jwt.rs  main.rs  middleware.rs  migrations.rs  mongo_database.rs  router.rs  server.rs
src/api/: mod.rs
src/api/controller/: auth_controller.rs  cleaning_plan_controller.rs  health_controller.rs  internal_controller.rs  mod.rs  user_controller.rs  user_duties_controller.rs
src/api/dto/: cleaning_plan_dto.rs  login_dto.rs  mod.rs  user_dto.rs  user_duty_dto.rs
src/api/mapper/: cleaning_plan_dto_mapper.rs  cleaning_plan_mapper.rs  dto_mapper.rs  mod.rs  user_dto_mapper.rs  user_duty_dto_mapper.rs  user_mapper.rs
src/controllers/: user_controller.rs
src/database/: cleaning_plan_repository.rs  crud_repository.rs  database.rs  filter_repository.rs  mod.rs  mongo_database.rs  read_repository.rs  user_duty_repository.rs  user_repository.rs
src/domain/model/: duty.rs  (+11 more)
src/entities/: cleaning_plan.rs  duty.rs  mod.rs  penalty.rs  user.rs
src/error/: error_handler.rs  error_mapper.rs  field_error.rs  http_error.rs  http_error_kind.rs  json_problem.rs  json_problems.rs  mod.rs  problem_type.rs
src/mapper/: cleaning_plan_mapper.rs  mod.rs  user_mapper.rs
src/repositories/: cleaning_plan_repository.rs  crud_repository.rs  filter_repository.rs  mod.rs  mongo_repository.rs  mongo_user_repository.rs  repository.rs  user.rs  user_repository.rs
src/routes/: user.rs
src/tests/: auth_service_test.rs  make_schedule_test.rs  mod.rs
tests/: conftest.py  environment.py  test_users.py
tests/features/: authentication.feature  cleaning_plan.feature  users.feature
tests/steps/: cleaning_plan_steps.py  common_steps.py  error_response_assertion_steps.py  users_steps.py
(+38 files in other folders)
