[package]
name = "just-clean-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
axum = "0.7.5"
async-trait = "0.1.81"
tokio = { version = "1.39.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_valid = "0.24.0"
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = [ "mysql", "macros", "runtime-async-std", "tls-rustls", "time" ] }
mongodb = "3.0.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
toml = "0.8.15"
regex = "1.10.5"
env_logger = "0.11.4"
log = "0.4.22"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
tower = "0.4.13"